# tbrs

./: Cargo.toml
src/: alive.rs  main.rs  sprites.rs
src/enemies/: ai.rs  mod.rs  spawner.rs
src/game_world/: areas.rs  hub.rs  mod.rs
src/movements/: mod.rs
src/player/: input.rs  inventory.rs  mod.rs  movement.rs
src/skills/: auto_attack.rs  mod.rs
src/ui/: chat_ui.rs  floating_text.rs  mod.rs  right_panel_ui.rs
